# latent2latent-MR2sCT-diffusion

./: .gitignore  pyproject.toml
ddim/: .config.py.bak  .dataset.py.bak  .infer.py.bak  .model.py.bak  .preprocess.py.bak  .train.py.bak  config.py  dataset.py  infer.py  model.py  preprocess.py  train.py
ddim/utils/: .loss_logger.py.bak  .schedule_utils.py.bak  calculate_img_metrics.py  helpers.py  schedule_utils.py  stitch_nii.py
weights/: trained_weights_500epochs_ConditionalUNet2DViT.pth
